name:            hephaestus-commons
version:         0.1
synopsis:        A set of functions and data types shared by Hephaestus modules
license:         BSD3
author:          Rodrigo Bonifacio
build-type:      Simple
cabal-version:   >= 1.2

library
  exposed-modules: CommonUtils, CommonTypes, CommonParsers, CommonStrings, CommonLists, CommonFiles
  hs-source-dirs:  src
  build-depends: base, network-uri, filepath
